--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -361,7 +361,7 @@ body {
   .logo-right-mobile {
     display: block !important;  
     margin-top: 10px !important;      /* less space above */
-    margin-bottom: 10px !important;   /* less space below */
+    margin-bottom: 1px !important;   /* less space below */
     width: 80px !important;           /* optional: make smaller */
     height: auto !important;
     z-index: 10;
@@ -591,7 +591,7 @@ body {
 
   .hide-on-desktop {
     display: block !important;
-
+    margin-top: 1px !important;
 
 }
 
