--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -452,7 +452,7 @@ body {
 .signup-form input[type="email"] {
   display: block !important;
   width: 100% !important;
-  height: 500px !important;
+  min-height: 50px !important;
   border-radius: 50px !important;
   padding: 0 15px !important;
   font-size: 1rem !important;
