Re-upload entire website

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -440,10 +440,10 @@ body {
 }
 
 .signup-form input[type="email"] {
-    box-sizing: border-box;        /* include padding in total height */
+    box-sizing: border-box !important;        /* include padding in total height */
     width: 100% !important;        /* full width of container */
-    height: 90px !important;       /* same as JOIN button */
-    padding: 20px 15px !important;    /* horizontal padding for text */
+    height: 50px !important;       /* same as JOIN button */
+    padding: 0 15px !important;    /* horizontal padding for text */
     font-size: 1rem !important;
     border-radius: 50px !important;
     background: #fff !important;
