--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -405,6 +405,13 @@ body {
     margin: 0 auto 1rem auto;
   }
 
+  #intro .locker-room-text { display: block; line-height: 0.6; font-size: 0.6rem; }
+  .locker-room-sub-text {
+    display: block; 
+    line-height: 0.6; 
+    font-size: 0.6rem;
+  }
+
   /* =========================
      SIGNUP FORM / JOIN BUTTON
   ========================= */
