--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -393,7 +393,7 @@ body {
   }
 
   #intro .left-column h1 {
-    font-size: 1.4rem;
+    font-size: 1.2rem;
     line-height: 1.2;
     margin-bottom: 0.5rem;
   }
@@ -410,6 +410,7 @@ body {
     display: block; 
     line-height: 0.6; 
     font-size: 0.6rem;
+    margin-top: 8px !important; 
   }
 
   /* =========================
@@ -438,7 +439,7 @@ body {
   flex-direction: column !important; /* stack input + button */
   width: 90% !important;
   max-width: 400px !important;
-  gap: 12px !important;
+  gap: 8px !important;
   margin: 1rem auto !important;
   padding: 0 !important;
   background: none !important;        /* remove pill background */
@@ -456,7 +457,7 @@ body {
     background: #fff !important;
     text-align: center;
     box-shadow: 3px 3px 0px rgba(138,43,226,0.3) !important;
-    margin-bottom: 12px !important;
+    margin-bottom: 0 !important;
     display: block;
   }
 
@@ -519,7 +520,7 @@ body {
     flex-direction: column !important;  
     align-items: center !important;
     width: 100%;
-    gap: 12px;
+    gap: 8px !important;
   }
 
   .locker-right {
