--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -410,6 +410,7 @@ body {
     display: block; 
     line-height: 0.6; 
     font-size: 0.6rem;
+    text-align: center;
     margin-top: 8px !important; 
   }
 
@@ -496,6 +497,7 @@ body {
     color: #fff !important;
     text-decoration: none !important;
     box-shadow: 3px 3px 0px rgba(138,43,226,0.3) !important;
+    margin-top: 8px !important; 
     gap: 8px !important;                             /* spacing between icon & text */
     padding: 0 15px !important;           /* keep icon + text comfortably spaced */
 }
