--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -414,8 +414,8 @@ body {
   }
 
   #intro .left-column h1 {
-    font-size: 1.3rem;
-    line-height: 1.3;
+    font-size: 1.5rem;
+    line-height: 1.2;
     margin-bottom: 0.5rem;
   }
 
@@ -426,13 +426,16 @@ body {
     margin: 0 auto 1rem auto;
   }
 
-  #intro .locker-room-text { display: block; line-height: 0.6; font-size: 0.6rem; }
+  #intro .locker-room-text { 
+    display: block; line-height: 0.6; font-size: 0.6rem; 
+}
+
   .locker-room-sub-text {
     display: block !important; 
-    line-height: 0.7 !important; 
+    line-height: 0.9 !important; 
     font-size: 0.9rem !important;
     text-align: center !important;
-    margin: 0 !important;
+    margin-bottom: 0.2rem !important;
   }
 
   .locker-room-text {
