--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -595,8 +595,9 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 50px;          /* match Join button */
-  width: 100%;
+  height: 50px !important;          /* match Join button */
+  width: 100% !important;
+  max-width: 400px !important;
   font-size: 1rem;
   font-weight: 700;
   border-radius: 50px;
@@ -604,6 +605,7 @@ body {
   color: #fff;
   text-decoration: none;
   box-shadow: 3px 3px 0px rgba(138,43,226,0.3);
+  margin-top: 8px !important;
   gap: 8px;              /* space between icon and text */
 }
 
