Re-upload entire website

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -141,8 +141,9 @@ body {
 }
 
 #intro .left-column .locker-room-sub-text {
-  margin-bottom: 1px !important; /* reduce space below paragraph */
-  line-height: 1.1 !important;   /* optional: tighten line spacing */
+  margin: 0 !important;
+  padding: 0 !important;
+  line-height: 1.1 !important; /* optional */
 }
 
 .locker-section {
